--- a/NextDeparture/Base.lproj/MainInterface.storyboard
+++ b/NextDeparture/Base.lproj/MainInterface.storyboard
@@ -18,10 +18,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="9" translatesAutoresizingMaskIntoConstraints="NO" id="VyS-S5-QL8" userLabel="Control Stack View">
-                                <rect key="frame" x="10" y="54" width="300" height="48"/>
+                                <rect key="frame" x="10" y="54" width="300" height="63.666666666666657"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="9Ye-Ju-3Fb" userLabel="Labels Stack View">
-                                        <rect key="frame" x="0.0" y="0.0" width="256" height="48"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="256" height="63.666666666666664"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="P6z-YT-Hpk" userLabel="From Stack View">
                                                 <rect key="frame" x="0.0" y="0.0" width="256" height="16"/>
@@ -35,14 +35,19 @@
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Slussen" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NtL-gT-Wfh">
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cAr-o1-vMv">
                                                         <rect key="frame" x="31" y="0.0" width="225" height="16"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                                        <nil key="textColor"/>
-                                                        <nil key="highlightedColor"/>
-                                                    </label>
+                                                        <state key="normal" title="Button">
+                                                            <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                        </state>
+                                                        <connections>
+                                                            <action selector="didPressFromStationButton" destination="M4Y-Lb-cyx" eventType="touchUpInside" id="hSR-NE-ibK"/>
+                                                        </connections>
+                                                    </button>
                                                 </subviews>
                                                 <constraints>
+                                                    <constraint firstItem="cAr-o1-vMv" firstAttribute="height" secondItem="P6z-YT-Hpk" secondAttribute="height" id="U7x-8x-1U8"/>
                                                     <constraint firstAttribute="height" constant="16" id="aFI-Ky-GLa"/>
                                                 </constraints>
                                             </stackView>
@@ -55,24 +60,41 @@
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Finntorp" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tMB-nj-YE4">
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qRD-WR-wys">
                                                         <rect key="frame" x="31" y="0.0" width="225" height="16"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                                        <nil key="textColor"/>
-                                                        <nil key="highlightedColor"/>
-                                                    </label>
+                                                        <state key="normal" title="Button">
+                                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        </state>
+                                                        <connections>
+                                                            <action selector="didPressDestinationStationButton" destination="M4Y-Lb-cyx" eventType="touchUpInside" id="Loo-ix-gV6"/>
+                                                        </connections>
+                                                    </button>
                                                 </subviews>
+                                                <constraints>
+                                                    <constraint firstItem="qRD-WR-wys" firstAttribute="height" secondItem="qS0-Qd-kVe" secondAttribute="height" id="iwO-7K-ToH"/>
+                                                </constraints>
                                             </stackView>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Senaste sökning" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jar-MR-fRe">
-                                                <rect key="frame" x="0.0" y="32" width="256" height="16"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Tb-hj-asY">
+                                                <rect key="frame" x="0.0" y="32" width="256" height="15.666666666666664"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dwP-4o-M1s">
+                                                <rect key="frame" x="0.0" y="47.666666666666671" width="256" height="16"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                <state key="normal" title="Button">
+                                                    <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="didPressSearchButton" destination="M4Y-Lb-cyx" eventType="touchUpInside" id="3D1-Bk-XtN"/>
+                                                </connections>
+                                            </button>
                                         </subviews>
                                         <constraints>
                                             <constraint firstItem="qS0-Qd-kVe" firstAttribute="height" secondItem="P6z-YT-Hpk" secondAttribute="height" id="DB4-Rk-pKU"/>
-                                            <constraint firstItem="jar-MR-fRe" firstAttribute="height" secondItem="P6z-YT-Hpk" secondAttribute="height" id="O6c-MM-jxq"/>
+                                            <constraint firstItem="dwP-4o-M1s" firstAttribute="height" secondItem="P6z-YT-Hpk" secondAttribute="height" id="LAw-9s-p3E"/>
                                             <constraint firstItem="7yI-GN-gwz" firstAttribute="width" secondItem="ZXv-Ys-Crh" secondAttribute="width" id="QBi-MG-xhh"/>
                                         </constraints>
                                     </stackView>
@@ -91,7 +113,7 @@
                                 </subviews>
                             </stackView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="06N-Tk-PLV">
-                                <rect key="frame" x="0.0" y="112" width="320" height="18"/>
+                                <rect key="frame" x="0.0" y="127.66666666666667" width="320" height="2.3333333333333286"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="JourneyTableViewCell" id="nOp-F9-wyR">
@@ -121,11 +143,12 @@
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="320" height="164"/>
                     <connections>
-                        <outlet property="destinationLabel" destination="tMB-nj-YE4" id="Jlg-Ae-b5z"/>
+                        <outlet property="destinationStationButton" destination="qRD-WR-wys" id="ZG5-KH-2Ov"/>
                         <outlet property="journeyTableView" destination="06N-Tk-PLV" id="svH-xQ-G02"/>
                         <outlet property="labelHeightConstraint" destination="aFI-Ky-GLa" id="iRA-Rc-URU"/>
-                        <outlet property="latestSearchLabel" destination="jar-MR-fRe" id="cYn-Jz-zNr"/>
-                        <outlet property="startStationLabel" destination="NtL-gT-Wfh" id="tCo-kw-yH8"/>
+                        <outlet property="searchButton" destination="dwP-4o-M1s" id="af7-Py-8LG"/>
+                        <outlet property="searchFromTimeInfoLabel" destination="1Tb-hj-asY" id="eYI-7r-mNT"/>
+                        <outlet property="startStationButton" destination="cAr-o1-vMv" id="Ksz-XH-4pN"/>
                         <outlet property="tableViewTopConstraint" destination="pvV-lC-OVr" id="cQd-At-PGV"/>
                         <outlet property="topSpacingConstraint" destination="WuJ-Ts-7yE" id="Dad-s4-RAO"/>
                     </connections>
